--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
@@ -1,27 +1,49 @@
+/*CSS do exercício 1*/
 .caixa {
     color: white;
     display: inline-block;
     line-height: 50px;
     text-align: center;
     vertical-align: top;
-  }
+}
   
-  .width-and-height {
+.width-and-height {
     height: 50px;
     width: 50px;
-  }
+}
   
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
+/* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
+.padding {
     padding: 20px;
-  }
+}
   
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
+/* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
+.margin {
     margin: 30px;
-  }
+}
   
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
+/* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
+.border {
     border: 5px solid black;
-  }
+}
+
+/*CSS do exercício 2*/
+.super-mario {
+    width: 200px;
+}
+  
+.goomba {
+    width: 100px;
+}
+  
+.baloon {
+  
+}
+  
+.speach {
+    font-size: 25px;
+}
+  
+.bowser {
+    width: 200px;
+}
