Adiciona texto base do exercicio 3

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
@@ -28,37 +28,42 @@
 }
 
 /*CSS do exercício 2*/
+.exercicio-2 {
+    height: 425px;
+}
+
+.super-mario, .goomba, .baloon, .speach, .bowser {
+    position: relative;
+    display: inline-block;
+}
 .super-mario {
-    position: absolute;
     width: 200px;
 }
   
 .goomba {
-    position: absolute;
-    top: 550px;
-    left: 50px;
+    top: 125px;
+    left: -150px;
     width: 100px;
 }
   
 .baloon {
-    position: absolute;
     z-index: 2;
-    top: 355px;
-    left: 250px;
+    top: -100px;
+    left: -500px;
 }
   
 .speach {
-    position: absolute;
     z-index: 3;
-    top: 400px;
-    left: 270px;
+    top: -200px;
+    left: -230px;
     font-size: 25px;
 }
   
 .bowser {
-    position: absolute;
     z-index: 1;
-    top: 450px;
-    left: 525px;
+    top: 35px;
+    left: 250px;
     width: 200px;
 }
+
+/*CSS do exercício 3*/
