Adiciona alteraçoes finais

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
@@ -84,7 +84,8 @@
 }
 
 .exercicio-3-1 li:active {
-    color: blue;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 /*CSS do exercício 3.2*/
