--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-04-css-flexbox-parte-2/style.css
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-04-css-flexbox-parte-2/style.css
@@ -78,7 +78,7 @@ body {
   flex-direction: column;
   margin: 20px;
   flex-basis: 350px;
-  align-items: center;
+  justify-content: center;
   flex-grow: 1;
 }
 
